add-media-query

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
     <header>
         <section class="box1">
             <nav>
-                <a href="#"><img src="./assets/FacebookLogo.png" alt="icon facebook" /></a>
-                <a href="#"
+                <a class="item-web" href="#"><img src="./assets/FacebookLogo.png" alt="icon facebook" /></a>
+                <a class="item-web" href="#"
                 ><img src="./assets/TwitterLogo.png" alt="icon twitter"
                 /></a>
-                <a href=""><img src="./assets/TwitchLogo.png" alt="icon twitch" /></a>
-                <a href=""><img src="./assets/DiscordLogo.png" alt="icon discord" /></a>
+                <a class="item-web" href=""><img src="./assets/TwitchLogo.png" alt="icon twitch" /></a>
+                <a class="item-web" href=""><img src="./assets/DiscordLogo.png" alt="icon discord" /></a>
+                <a class="item-mobile" href=""><img src="./assets/User.png" alt="perfil" /></a>
             </nav>
             <h1>BLOGAMES</h1>
             <section class="box2">
                 <div>
-                    <img src="./assets/User.png" alt="perfil" />
-                    <img src="./assets/lupa.png" alt="buscar" />
+                    <img class="item-web" src="./assets/User.png" alt="perfil" />
+                    <img class="item-web" src="./assets/lupa.png" alt="buscar" />
                     <img src="./assets/menu.png" alt="menu" />
                 </div>
             </section>
@@ -62,34 +63,34 @@
                 <h2>Coringa pode aparecer em MultiVersus em breve</h2>
             </div>
         </section>
-        </figure>
-        <figure>
+      </figure>
+      
         <section class="carro">
             <div>
                 <h3>30 de agosto, 2023</h3>
                 <h2>EA Games confirma novo jogo e janela de lançamento</h2>
-                </section>
             </div>
-      </figure>
+        </section>
+ 
       <section class="mais">
         <h2>CARREGAR MAIS</h2>
         <img src="./assets/mais.png" alt="carregar mais">
       </section>
     </main>
     <footer>
-        <section>
-                <div>
-                    <h2>PT-BR</h2>
-                    <img src="./assets/mais.png" alt="carregar mais">
-                </div>
-            <nav>
-                <ul>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Termos de serviço</a></li>
-                    <li><a href="">Política de privacidade</a></li>
-                </ul>
-            </nav>
-        </section>
+      <section>
+        <div class="item-web">
+          <h2>PT-BR</h2>
+          <img src="./assets/mais.png" alt="carregar mais">          
+        </div>
+        <nav>
+          <ul>
+            <li><a href="">Sobre</a></li>   
+            <li><a href="">Termos de serviço</a></li>
+            <li><a href="">Política de privacidade</a></li>
+          </ul>
+        </nav>
+      </section>
     </footer>
   </body>
 </html>
